Fixed a font/contrast issue in contact section

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,7 +4,6 @@ body {
 }
 a {
   color: #009688;
-  font-size: 20px;
 }
 blockquote {
   border-left: 5px solid #795548;
@@ -295,6 +294,9 @@ a.hoverline:hover {
   margin-bottom: 0;
 }
 
+#contact a {
+  font-size: 20px;
+}
 #contact a:not(.btn-floating) {
   bottom: 6px;
   left: 20px;
